# dot-PE

./: .gitignore  LICENSE  README.md  collect_benchmark_results.py  context.md  dot-pe_evidence_calibration_plan.md  dot-pe_evidence_calibration_support_14022804.plan.md  environment.yml  log.md  multibank_inference_checklist_addendum.md  multibank_inference_instructions.md  multicore.md  progress.md  pyproject.toml  run_benchmark.sh  run_one_benchmark.py  tmp_mp_combo_check.py
MP/: PLAN.md  run_mp.py
conditioned_sampling/: __init__.py  conditional_sampler.py  conditional_sampling_example.py  iterative_zoom.py
debugging/: create_data.ipynb  debug_intrinsic_selection.py  flattened_debug_test.ipynb  flattened_inference_debug.py  single_det_optimization.ipynb  waveform_comparison.ipynb  waveform_comparison.py
dot-pe/: base_sampler_free_sampling.py  config.py  create_sample_bank.ipynb  evidence_calculator.py  fisher_analysis.py  inference.py  posterior.py  sample_generation.py  sampler_free_sampling.py  veto.py  waveform_creation.py
dot_pe/: base_sampler_free_sampling.py  coherent_processing.py  config.py  dask_inference.py  device_manager.py  effectualness.py  evidence_calculator.py  evidence_calibration.py  inference.py  likelihood_calculating.py  marginalization.py  mass_prior.py  mp_inference.py  parallel_extrinsic.py  power_law_mass_prior.py  sample_banks.py  sample_banks_flexible.py  sample_generation.py  sample_processing.py  sampler_free_sampling.py  single_detector.py  thin_coherent.py  utils.py  veto.py  vetoing.py  waveform_banks.py  waveform_creation.py
experiments/: PROGRESS.md  auto_run.sh  bench_extrinsic.py  compare.py  compare_posteriors.py  run_experiment.py  run_real_event_mp.py
gpu/: BENCHMARK.md  PROGRESS.md  README.md  check_real_event.py  distance_sampling_gpu.py  extrinsic_gpu.py  gpu_constants.py  gpu_info.py  inference.py  likelihood_calculating_gpu.py  mission_statemet.txt  profile_run.py  run.py  single_detector_gpu.py  test_gpu_correctness.py
lsf/: run_inference_dask.bsub
lsf_swarm/: LSF-SWARM-PLAN.md  MISSION.txt  run_swarm.py  worker_coherent.py  worker_incoherent.py
notebooks/: bank_prior.ipynb  chi_test.ipynb  create_sample_bank.ipynb  iterative_zoom.ipynb  run_inference.ipynb  (+2 more)
tbd/: fbin.npy  (+16 more)
(+147 files in other folders)
